# gtk3-opengl

./: CMakeLists.txt  background.c  gui.c  gui.h  main.c  program.c
shaders/cube/: fragment.glsl
